editing the products data in json format

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
       </div>
       <div class="products-center">
         <!-- single product -->
-        <!-- <article class="product">
+
+        <article class="product">
           <div class="img-container">
             <img
-              src="./images/product-1.jpeg"
+              src="./public/images/product-1.jpeg"
               alt="product"
               class="product-img"
             />
@@ -61,7 +62,8 @@
           </div>
           <h3>queen bed</h3>
           <h4>$16</h4>
-        </article> -->
+        </article>
+
         <!-- end of single product -->
       </div>
     </section>
@@ -73,8 +75,9 @@
         <h2>your cart</h2>
         <div class="cart-content">
           <!-- cart item -->
+
           <!-- <div class="cart-item">
-            <img src="./images/product-1.jpeg" alt="product" />
+            <img src="./public/images/product-1.jpeg" alt="product" />
             <div>
               <h4>queen bed</h4>
               <h5>$9.00</h5>
@@ -82,12 +85,11 @@
             </div>
             <div>
               <i class="fas fa-chevron-up"></i>
-              <p class="item-amount">
-                1
-              </p>
+              <p class="item-amount">1</p>
               <i class="fas fa-chevron-down"></i>
             </div>
           </div> -->
+
           <!-- cart item -->
         </div>
         <div class="cart-footer">
